--- a/src/Pages/AuthPage/AuthPage.module.scss
+++ b/src/Pages/AuthPage/AuthPage.module.scss
@@ -1,15 +1,17 @@
 .AuthPage {
-    height: 100%;
+    height: 100vh;
     display: flex;
     justify-content: space-evenly;
     align-items: center;
-    background-color: var(--white);
+    background-image: url('https://www.creativefabrica.com/wp-content/uploads/2022/11/13/Steampunk-Watches-Background-Wallpaper-46472312-1.png');
+    background-repeat: repeat-y;
     border-radius: 2vmin;
   }
   
-  .AuthPage h3 {
+  .AuthPage .h3 {
     margin-top: 4vmin;
     text-align: center;
-    color: var(--text-light);
+    color: var(white);
     cursor: pointer;
+    background-color: white;
   }
