--- a/src/components/Logo/Logo.module.scss
+++ b/src/components/Logo/Logo.module.scss
@@ -6,7 +6,7 @@
     justify-content: center;
     align-items: center;
     font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
-    background-color: grey;
+    background-color: black;
     color: var(--tan-1);
     font-size: 2.7vmin;
     border: .6vmin solid var(--tan-2);
