--- a/src/components/OrderDetail/OrderDetail.module.scss
+++ b/src/components/OrderDetail/OrderDetail.module.scss
@@ -5,6 +5,10 @@
     padding: 3vmin;
     font-size: 2vmin;
     color: var(--text-light);
+    background-color: black;
+    border: .1vmin solid var(--tan-3);
+    border-radius: 2vmin;
+    margin: 3vmin 0;
   }
   
   .OrderDetail .sectionHeading {
